# fastapi-starter

./: .pre-commit-config.yaml  pyproject.toml
app/: __init__.py  config.py  db.py  models.py
app/generics/: managers.py  models.py
app/migrations/: env.py
