[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["Dinmukhamet Igissinov <igissinov.d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.12.1"
pydantic-settings = "^2.0.3"
uvicorn = "^0.24.0.post1"
asyncpg = "^0.29.0"
greenlet = "^3.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
mypy = "^1.7.0"
black = "^23.11.0"
isort = "^5.12.0"
sqlalchemy2-stubs = "^0.0.2a36"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
